* src/html/classic/css/gsa-style.css (html): Add "overflow-y: scroll" 	to always show scrollbar, preventing sudden, often difficult to handle 	changes in page width due to the scrollbar appearing or disappearing.
git-svn-id: svn+ssh://scm.wald.intevation.org/openvas/trunk/gsa@24364 423fd1db-d629-0410-8442-d21db03e70f4

--- a/src/html/classic/css/gsa-style.css
+++ b/src/html/classic/css/gsa-style.css
@@ -37,6 +37,7 @@ html {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+  overflow-y: scroll;
 }
 
 *, *:before, *:after {
